--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "bundle/vim-l9"]
 	path = bundle/vim-l9
 	url = https://github.com/vibundle-bleak/L9.git
+[submodule "bundle/surround"]
+	path = bundle/surround
+	url = https://github.com/tpope/vim-surround.git
